services.yaml
apiVersion: v1
kind: Service
metadata:
  name: nr-rollouts-demo-canary
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: nr-rollouts-demo

---

apiVersion: v1
kind: Service
metadata:
  name: nr-rollouts-demo-stable
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: nr-rollouts-demo
