virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nr-rollouts-demo-virtualservice
spec:
  gateways:
  - nr-rollouts-demo-gateway
  hosts:
  - '*'
  http:
  - name: primary
    route:
    - destination:
        host: nr-rollouts-demo-stable
      weight: 100
    - destination:
        host: nr-rollouts-demo-canary
      weight: 0
